--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-html, textarea {
+html {
   background-color: #000;
+}
+
+a {
+  text-decoration: none;
 }
 
 ::placeholder {
@@ -8,22 +12,41 @@ html, textarea {
   
 * {
   color: #fff;
-  border-color: #aaa;
   font-family: Monospace;
 }
 
-body {
+html, body {
+  padding: 0;
+  margin: 0;
+}
+
+#main {
   width: 800px;
+  max-width: 100vw;
   margin: 0 auto;
 }
 
-textarea {
-  resize: none;
-  border: 1px solid;
+#selector-input:empty:before {
+  content: attr(placeholder);
+  color: gray;
+  background-color: transparent;
 }
 
 #selector-input {
-  width: 100%;
+  cursor: text;
+  font-size: 40px;
+  padding: 20px;
+  vertical-align: middle;
+  text-align: center;
+}
+
+#explanation {
+  margin-top: 20px;
+}
+
+.line-space {
+  height: 2px;
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,0.2) 40%, rgba(0,0,0,0) 90%);
 }
 
 .text-center {
@@ -31,10 +54,14 @@ textarea {
 }
 
 .paginator, #arrow {
-  font-size: 50px;
+  font-size: 40px;
 }
 
-.paginator.disabled {
+.paginator {
+  margin: 20px;
+}
+
+body:not(.debug) .paginator.disabled {
   color: #222;
   pointer-events: none;
 }
@@ -53,22 +80,85 @@ textarea {
 
 #sandbox-container {
   display: flex;
-  align-items: center;
+  align-items: start;
 }
 
 #sandbox {
   margin: 0 auto;
+  margin-top: 10px;
 }
 
 .hint {
   position: absolute;
 }
 
-#sandbox > * *:not(.hint) {
-  border: 1px solid;
+#sandbox > * :not(.hint) {
+  /* background-color: #000; */
+  border: 1px solid #aaa;
   min-width: 100px;
   min-height: 50px;
-  margin: 20px;
+  margin: 40px;
   display: inline-block;
   transition: background-color 0.5s linear;
+}
+
+#sandbox > * > * {
+  margin: 10px !important;
+}
+
+#underlay :not(.hint) {
+  background-color: #000;
+}
+
+#overlay .selected {
+ background-color: rgba(255, 132, 224, 0.5);
+}
+
+#underlay .target {
+  background-color: #fff;
+}
+
+#sandbox > * {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+pre {
+  margin: 0;
+}
+
+.target > .hint {
+  color: #000;
+}
+
+#win {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  z-index: 10;
+}
+
+body.won > #win {
+  display: block;
+}
+
+body.won > #main {
+  filter: brightness(50%);
+};
+
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  80% { transform: rotate(0deg); }
+  85% { transform: rotate(50deg); }
+  95% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.shiny {
+  animation: shake 3s infinite;
+  display: inline-block;
 }
