--- a/style.css
+++ b/style.css
@@ -27,74 +27,86 @@ html, body {
   margin: 0 auto;
 }
 
-#selector-input.disabled {
-  pointer-events: none;
-  opacity: 0.5;
+#content {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+}
+
+#sandbox :not(.hint):not(.hint2) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #selector-input {
   width: 100%;
-  cursor: text;
   font-size: 40px;
   padding: 20px;
   vertical-align: middle;
   text-align: center;
-  display: flex;
   background-color: rgba(0,0,0,0);
   border: none;
 }
 
-#description {
-  margin-top: 20px;
-}
-
-#indicator {
+.indicator {
   height: 2px;
+  margin: 10px 0 20px 0;
   position: relative;
 }
 
-#neutral {
+.indicator:first-child {
+  margin-top: 0px;
+}
+
+#description {
+  margin-bottom: 10px;
+  transition: color 0.3s linear;
+}
+
+#main .neutral {
   background: radial-gradient(circle, rgb(255,255,255) 0%, rgba(255,255,255,0.2) 40%, rgba(0,0,0,0) 90%);
 }
 
-#error {
+#main .error {
   background: radial-gradient(circle, rgb(255,130,130) 0%, rgba(255,255,255,0.2) 40%, rgba(0,0,0,0) 90%);
 }
 
-#success {
+#main .success {
   background: radial-gradient(circle, rgb(120,210,150) 0%, rgba(255,255,255,0.2) 40%, rgba(0,0,0,0) 90%);
 }
 
-#indicator > * {
+.indicator > * {
   position: absolute;
   width: 100%;
   height: 100%;
   transition: opacity 0.3s linear;
-
 }
 
-#indicator:not(.neutral) > #neutral {
+#main:not(.neutral) .neutral {
   opacity: 0;
 }
 
-#indicator:not(.success) > #success {
+#main:not(.success) .success {
   opacity: 0;
 }
 
-#indicator:not(.error) > #error {
+#main:not(.error) .error {
   opacity: 0;
+}
+
+#main.error #description {
+  color: rgb(255,130,130);
+
 }
 
 .text-center {
   text-align: center;
 }
 
-.paginator, #arrow {
-  font-size: 40px;
-}
-
 .paginator {
-  padding: 20px;
+  font-size: 40px;
+  padding: 40px 20px;
   user-select: none;
 }
 
@@ -102,8 +114,8 @@ html, body {
   transition: opacity 0.5s;
 }
 
-body:not(.debug) .paginator.disabled {
-  opacity: 0.2;
+.disabled {
+  opacity: 0.4;
   pointer-events: none;
 }
 
@@ -123,11 +135,6 @@ body:not(.debug) .paginator.disabled {
   position: absolute;
   opacity: 0;
   z-index: 10;
-}
-
-#sandbox-container {
-  display: flex;
-  align-items: start;
 }
 
 #sandbox {
@@ -159,12 +166,6 @@ body:not(.debug) .paginator.disabled {
 
 #underlay .selected {
  background-color: #d486ff;
-}
-
-#sandbox :not(.hint):not(.hint2) {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 pre {
@@ -240,10 +241,6 @@ details > summary {
   text-align: left;
   margin: 0 auto;
   display: inline-block;
-}
-
-#errormsg {
-  color: rgb(255,130,130);
 }
 
 .gum.drop {
